; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libc/compat-43/extr_sigcompat.c_xsi_sigpause.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libc/compat-43/extr_sigcompat.c_xsi_sigpause.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIG_BLOCK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @xsi_sigpause(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %5 = load i32, i32* @SIG_BLOCK, align 4
  %6 = call i32 @__libc_sigprocmask(i32 %5, i32* null, i32* %4)
  %7 = icmp eq i32 %6, -1
  br i1 %7, label %8, label %9

8:                                                ; preds = %1
  store i32 -1, i32* %2, align 4
  br label %16

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = call i32 @sigdelset(i32* %4, i32 %10)
  %12 = icmp eq i32 %11, -1
  br i1 %12, label %13, label %14

13:                                               ; preds = %9
  store i32 -1, i32* %2, align 4
  br label %16

14:                                               ; preds = %9
  %15 = call i32 @__libc_sigsuspend(i32* %4)
  store i32 %15, i32* %2, align 4
  br label %16

16:                                               ; preds = %14, %13, %8
  %17 = load i32, i32* %2, align 4
  ret i32 %17
}

declare dso_local i32 @__libc_sigprocmask(i32, i32*, i32*) #1

declare dso_local i32 @sigdelset(i32*, i32) #1

declare dso_local i32 @__libc_sigsuspend(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
